Moving interfaces tests to snaps-state tool
Part 3 of the full migration

--- a/tests/main/interfaces-kvm/task.yaml
+++ b/tests/main/interfaces-kvm/task.yaml
@@ -4,9 +4,7 @@ details: |
     The kvm interface allows read/write access to kvm.
 
 prepare: |
-    #shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB"/snaps.sh
-    install_local test-snapd-kvm
+    "$TESTSTOOLS"/snaps-state install-local test-snapd-kvm
 
     if [ -e /dev/kvm ]; then
         mv /dev/kvm /dev/kvm.bak
