--- a/tests/main/interfaces-home/task.yaml
+++ b/tests/main/interfaces-home/task.yaml
@@ -17,11 +17,8 @@ environment:
     HIDDEN_READABLE_FILE: "$HOME/.readable"
 
 prepare: |
-    #shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB/snaps.sh"
-
     echo "Given a snap declaring the home plug is installed"
-    install_local home-consumer
+    "$TESTSTOOLS"/snaps-state install-local home-consumer
 
     echo "And there is a readable file in HOME"
     echo ok > "$READABLE_FILE"
