--- a/tests/main/interfaces-locale-control/task.yaml
+++ b/tests/main/interfaces-locale-control/task.yaml
@@ -22,11 +22,8 @@ prepare: |
         fi
     fi
 
-    #shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB/snaps.sh"
-
     echo "Given a snap declaring a plug on the locale-control interface is installed"
-    install_local locale-control-consumer
+    "$TESTSTOOLS"/snaps-state install-local locale-control-consumer
 
     mv /etc/default/locale locale.back
     cat > /etc/default/locale <<EOF
