--- a/tests/main/parallel-install-remove-after/task.yaml
+++ b/tests/main/parallel-install-remove-after/task.yaml
@@ -28,15 +28,13 @@ restore: |
     esac
 
 execute: |
-    #shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB"/snaps.sh
     #shellcheck source=tests/lib/systems.sh
     . "$TESTSLIB"/systems.sh
 
     # install confined and classic snaps
-    install_local test-snapd-sh
+    "$TESTSTOOLS"/snaps-state install-local test-snapd-sh
     if is_classic_system ; then
-        install_local test-snapd-classic-confinement --classic
+        "$TESTSTOOLS"/snaps-state install-local test-snapd-classic-confinement --classic
     fi
 
     snap set system experimental.parallel-instances=true
@@ -50,9 +48,9 @@ execute: |
     fi
 
     # new instances of same snaps
-    install_local_as test-snapd-sh test-snapd-sh_foo
+    "$TESTSTOOLS"/snaps-state install-local-as test-snapd-sh test-snapd-sh_foo
     if is_classic_system ; then
-        install_local_as test-snapd-classic-confinement test-snapd-classic-confinement_foo --classic
+        "$TESTSTOOLS"/snaps-state install-local-as test-snapd-classic-confinement test-snapd-classic-confinement_foo --classic
     fi
 
     # parallel instances works
