--- a/tests/main/postrm-purge/task.yaml
+++ b/tests/main/postrm-purge/task.yaml
@@ -13,8 +13,7 @@ restore: |
 prepare: |
     # TODO: unify this with tests/main/snap-mgmt/task.yaml
     echo "When some snaps are installed"
-    #shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB"/snaps.sh
+
 
     snap set core experimental.user-daemons=true
 
@@ -29,7 +28,7 @@ prepare: |
             # None of the "user" snaps work on 14.04
             continue
         fi
-        install_local "$name"
+        "$TESTSTOOLS"/snaps-state install-local "$name"
         snap list | MATCH "$name"
     done
 
