--- a/tests/main/snap-env/task.yaml
+++ b/tests/main/snap-env/task.yaml
@@ -7,14 +7,10 @@ environment:
     INSTANCE_KEY/parallel: foo
 
 prepare: |
-    # shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB/snaps.sh"
-
     if [[ "$SPREAD_VARIANT" == "parallel" ]]; then
         snap set system experimental.parallel-instances=true
     fi
-    # shellcheck disable=SC2153
-    install_local_as test-snapd-tools "$NAME"
+    "$TESTSTOOLS"/snaps-state install-local-as test-snapd-tools "$NAME"
 
 restore: |
     if [[ "$SPREAD_VARIANT" == "parallel" ]]; then
