--- a/tests/main/snap-connect/task.yaml
+++ b/tests/main/snap-connect/task.yaml
@@ -1,11 +1,8 @@
 summary: Check that snap connect works
 
 prepare: |
-    #shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB"/snaps.sh
-
     echo "Install a test snap"
-    install_local home-consumer
+    "$TESTSTOOLS"/snaps-state install-local home-consumer
     # the home interface is not autoconnected on all-snap systems
     if [[ ! "$SPREAD_SYSTEM" == ubuntu-core-16-* ]]; then
         snap disconnect home-consumer:home
