--- a/tests/main/snap-disconnect/task.yaml
+++ b/tests/main/snap-disconnect/task.yaml
@@ -18,9 +18,6 @@ execute: |
     #shellcheck source=tests/lib/systems.sh
     . "$TESTSLIB"/systems.sh
 
-        #shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB/snaps.sh"
-
     inspect_connection() {
       CONN="$1"
       # shellcheck disable=SC2002
@@ -88,12 +85,12 @@ execute: |
     fi
 
     echo "Checking that a connection for missing plug can be forgotten"
-    install_local test-snap-producer
-    install_local test-snap-consumer.v1
+    "$TESTSTOOLS"/snaps-state install-local test-snap-producer
+    "$TESTSTOOLS"/snaps-state install-local test-snap-consumer.v1
     snap connect test-snap-consumer:shared-content-plug test-snap-producer:shared-content-slot
     snap connections test-snap-consumer | MATCH "content\[mylib\] *test-snap-consumer:shared-content-plug *test-snap-producer:shared-content-slot"
     # refresh to a newer version without content plug
-    install_local test-snap-consumer.v2
+    "$TESTSTOOLS"/snaps-state install-local test-snap-consumer.v2
     snap connections test-snap-consumer | not MATCH "content\[mylib\] *test-snap-consumer:shared-content-plug *test-snap-producer:shared-content-slot"
     inspect_connection "test-snap-consumer:shared-content-plug test-snap-producer:shared-content-slot" | MATCH "true"
     snap disconnect --forget test-snap-consumer:shared-content-plug test-snap-producer:shared-content-slot
