--- a/tests/main/snap-logs/task.yaml
+++ b/tests/main/snap-logs/task.yaml
@@ -5,9 +5,7 @@ details: |
     for all supported systems.
 
 prepare: |
-    # shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB/snaps.sh"
-    install_local test-snapd-service
+    "$TESTSTOOLS"/snaps-state install-local test-snapd-service
 
 execute: |
     echo "check the logs are displayed by service-name and service-name.app"
