--- a/tests/main/snap-routine-file-access/task.yaml
+++ b/tests/main/snap-routine-file-access/task.yaml
@@ -21,9 +21,7 @@ description: |
     access.
 
 prepare: |
-    #shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB"/snaps.sh
-    install_local test-snapd-file-access
+    "$TESTSTOOLS"/snaps-state install-local test-snapd-file-access
 
     # Ensure interfaces are disconnected
     snap disconnect test-snapd-file-access:home
@@ -100,8 +98,6 @@ execute: |
     if [[ "$SPREAD_SYSTEM" = ubuntu-core-* ]]; then
         exit 0
     fi
-    #shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB"/snaps.sh
-    install_local test-snapd-classic-confinement --classic
+    "$TESTSTOOLS"/snaps-state install-local test-snapd-classic-confinement --classic
 
     snap routine file-access test-snapd-classic-confinement / | MATCH read-write
