--- a/tests/main/snap-routine-portal-info/task.yaml
+++ b/tests/main/snap-routine-portal-info/task.yaml
@@ -8,9 +8,7 @@ systems:
     - -centos-7-*
 
 prepare: |
-    #shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB"/snaps.sh
-    install_local test-snapd-desktop
+    "$TESTSTOOLS"/snaps-state install-local test-snapd-desktop
     tests.session -u test prepare
 
 restore: |
