--- a/tests/main/special-home-can-run-classic-snaps/task.yaml
+++ b/tests/main/special-home-can-run-classic-snaps/task.yaml
@@ -6,9 +6,7 @@ environment:
     SPECIAL_USER_NAME/jenkins: jenkins
     SPECIAL_USER_NAME/postgres: postgres
 prepare: |
-    # shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB/snaps.sh"
-    install_local_classic test-snapd-classic-confinement
+    "$TESTSTOOLS"/snaps-state install-local test-snapd-classic-confinement --classic
 
     # Install the corresponding package that brings the special user account.
     # Specialize the code as required for a particular user.
