Fix error on function not implemented on snaps-state tool

--- a/tests/main/stale-base-snap/task.yaml
+++ b/tests/main/stale-base-snap/task.yaml
@@ -30,6 +30,8 @@ prepare: |
     touch squashfs-root/customized
     sed -i -e 's/version: .*/version: customized/' squashfs-root/meta/snap.yaml
 
+    #shellcheck source=tests/lib/snaps.sh
+    . "$TESTSLIB"/snaps.sh
     mksnap_fast squashfs-root core-customized.snap
 
 restore: |
