--- a/tests/nested/manual/cloud-init-never-used-not-vuln/task.yaml
+++ b/tests/nested/manual/cloud-init-never-used-not-vuln/task.yaml
@@ -23,11 +23,11 @@ prepare: |
     # build the attacker cloud-init NoCloud cdrom drive
     nested_build_seed_cdrom "$TESTSLIB/cloud-init-seeds/attacker-user" seed2.iso cidata user-data meta-data
 
-    "$TESTSTOOLS"/nested-state build-core-image
-
     # first boot will use seed1 which is empty, but the same file name will be 
     # replace while the VM is shutdown to use the second attacker iso
-    "$TESTSTOOLS"/nested-state start-new-core-vm --param-cd "-cdrom $(pwd)/seed.iso"
+    NESTED_PARAM_CD="-cdrom $(pwd)/seed.iso"
+    nested_create_core_vm
+    nested_start_core_vm
 
 debug: |
     if [ -f snapd-before-reboot.logs ]; then
@@ -46,8 +46,10 @@ execute: |
     #shellcheck source=tests/lib/snaps.sh
     . "$TESTSLIB/snaps.sh"
 
+
     # the VM here will not ever had used cloud-init so snapd should disable 
     # cloud-init when it is installed
+
 
     # wait for done seeding
     nested_exec "sudo snap wait system seed.loaded"
@@ -111,13 +113,13 @@ execute: |
     # gracefully shutdown so that we don't have file corruption
     echo "Gracefully shutting down the nested VM to prepare a simulated attack"
     boot_id="$(nested_get_boot_id)"
-    "$TESTSTOOLS"/nested-state shutdown-existing-vm
+    nested_shutdown
 
     # replace the empty seed.iso with the new attacker iso
     mv seed2.iso seed.iso
 
     echo "Restarting nested VM with attacker cloud-init CD-ROM drive"
-    "$TESTSTOOLS"/nested-state start-existing-vm
+    nested_force_start_vm
     nested_wait_for_reboot "${boot_id}"
 
     # cloud-init should not actually run, since it was disabled, but in case the
