--- a/tests/nested/manual/cloud-init-nocloud-not-vuln/task.yaml
+++ b/tests/nested/manual/cloud-init-nocloud-not-vuln/task.yaml
@@ -26,11 +26,11 @@ prepare: |
     # second boot - attacker drive
     nested_build_seed_cdrom "$TESTSLIB/cloud-init-seeds/attacker-user" seed2.iso cidata user-data meta-data
 
-    "$TESTSTOOLS"/nested-state build-core-image
-
     # first boot uses seed1 to create the normal-user in addition to the 
     # system-user assertion
-    "$TESTSTOOLS"/nested-state start-new-core-vm --param-cd "-cdrom $(pwd)/seed.iso"
+    NESTED_PARAM_CD="-cdrom $(pwd)/seed.iso"
+    nested_create_core_vm
+    nested_start_core_vm
 
 debug: |
     if [ -f snapd-before-reboot.logs ]; then
@@ -120,14 +120,14 @@ execute: |
     # gracefully shutdown so that we don't have file corruption
     echo "Gracefully shutting down the nested VM to prepare a simulated attack"
     boot_id="$(nested_get_boot_id)"
-    "$TESTSTOOLS"/nested-state shutdown-existing-vm
+    nested_shutdown
 
     # replace the seed.iso with the new attacker iso
     mv seed2.iso seed.iso
 
     echo "Restarting nested VM with attacker cloud-init CD-ROM drive"
-    "$TESTSTOOLS"/nested-state start-existing-vm
-    nested_wait_for_reboot "$boot_id"
+    nested_force_start_vm
+    nested_wait_for_reboot "${boot_id}"
 
     # cloud-init will actually still run because it was not disabled and we
     # provided a cloud-init drive but importantly, it will not import the drive,
