--- a/tests/nested/manual/grade-signed-above-testkeys-boot/task.yaml
+++ b/tests/nested/manual/grade-signed-above-testkeys-boot/task.yaml
@@ -98,8 +98,8 @@ prepare: |
   # start fake device svc
   # systemd_create_and_start_unit fakedevicesvc "$(command -v fakedevicesvc) localhost:11029"
 
-  "$TESTSTOOLS"/nested-state build-core-image
-  "$TESTSTOOLS"/nested-state start-new-core-vm
+  nested_create_core_vm
+  nested_start_core_vm
 
 restore: |
   if [ "$TRUST_TEST_KEYS" = "false" ]; then
