--- a/tests/nested/manual/minimal-smoke/task.yaml
+++ b/tests/nested/manual/minimal-smoke/task.yaml
@@ -6,7 +6,7 @@ prepare: |
     #shellcheck source=tests/lib/nested.sh
     . "$TESTSLIB/nested.sh"
     nested_fetch_spread
-    "$TESTSTOOLS"/nested-state build-core-image
+    nested_create_core_vm
 
 execute: |
     #shellcheck source=tests/lib/nested.sh
@@ -30,7 +30,7 @@ execute: |
         exit 1
     fi
 
-    "$TESTSTOOLS"/nested-state start-new-core-vm --param-mem "-m $MINIMAL_MEM"
+    NESTED_PARAM_MEM="-m $MINIMAL_MEM" nested_start_core_vm
 
     set +x
     export SPREAD_EXTERNAL_ADDRESS=localhost:8022
