--- a/tests/nested/manual/preseed/task.yaml
+++ b/tests/nested/manual/preseed/task.yaml
@@ -25,7 +25,7 @@ prepare: |
   dpkg -i "$SPREAD_PATH"/../snapd_*.deb
 
   # create a VM and mount a cloud image
-  "$TESTSTOOLS"/nested-state build-classic-image
+  nested_create_classic_vm
   mkdir -p "$IMAGE_MOUNTPOINT"
   IMAGE_NAME=$(nested_get_image_name classic)
   mount_ubuntu_image "$NESTED_IMAGES_DIR/$IMAGE_NAME" "$IMAGE_MOUNTPOINT"
@@ -53,7 +53,9 @@ prepare: |
   SNAPD_DEBUG=1 /usr/lib/snapd/snap-preseed --reset "$IMAGE_MOUNTPOINT"
 
 restore: |
-  "$TESTSTOOLS"/nested-state delete-existing-vm
+  #shellcheck source=tests/lib/nested.sh
+  . "$TESTSLIB/nested.sh"
+  nested_destroy_vm
 
   # any of the restore commands can fail depending on where execute part stopped,
   # account for that with ||true.
@@ -80,10 +82,9 @@ execute: |
   . "$TESTSLIB/preseed.sh"
   umount_ubuntu_image "$IMAGE_MOUNTPOINT"
 
-  "$TESTSTOOLS"/nested-state start-new-classic-vm
-
   #shellcheck source=tests/lib/nested.sh
   . "$TESTSLIB/nested.sh"
+  nested_start_classic_vm
 
   echo "Waiting for firstboot seeding to finish"
   nested_exec "sudo snap wait system seed.loaded"
