--- a/build-aux/snap/snapcraft.yaml
+++ b/build-aux/snap/snapcraft.yaml
@@ -53,7 +53,34 @@ parts:
         DEB_BUILD_OPTIONS=nocheck
         export DEB_BUILD_OPTIONS
       fi
-      # run the real build (but just build the binary package, and don't
+      if [ -d "$SNAPCRAFT_PART_SRC/developer-snapd-snap-options" ]; then
+        if [ -f "$SNAPCRAFT_PART_SRC/developer-snapd-snap-options/testkeys" ]; then
+          # set the testkeys deb build option
+          echo "building deb with testkeys"
+          DEB_BUILD_OPTIONS="$DEB_BUILD_OPTIONS testkeys"
+          export DEB_BUILD_OPTIONS
+        elif [ -f "$SNAPCRAFT_PART_SRC/developer-snapd-snap-options/both-testkeys" ]; then
+          # build both a deb with the testkeys and a normal deb, extracting the
+          # normal deb into the snap, and stuffing the unextracted testkeys deb
+          # into the build - this is useful for spread runs on github actions 
+          # where we build a single snap file with both testkeys and without, 
+          # and then unpack and create two separate snaps to attach to a PR,
+          # one for normal folks to test and install with normal root of trust,
+          # and the other with the testkeys to eventually be used from inside 
+          # spread itself to eliminate also building snapd in the spread run
+
+          PREV_DEB_BUILD_OPTIONS=$DEB_BUILD_OPTIONS
+
+          echo "building additional deb with testkeys"
+          DEB_BUILD_OPTIONS="$DEB_BUILD_OPTIONS testkeys"
+          export DEB_BUILD_OPTIONS
+          dpkg-buildpackage -b -Zgzip -zfast
+          cp $(pwd)/../snapd_*.deb $SNAPCRAFT_PART_INSTALL/testkeys-snapd.deb
+
+          DEB_BUILD_OPTIONS=$PREV_DEB_BUILD_OPTIONS
+        fi
+      fi
+      # NOW run the real build (but just build the binary package, and don't
       # bother compressing it too much)
       dpkg-buildpackage -b -Zgzip -zfast
       dpkg-deb -x $(pwd)/../snapd_*.deb $SNAPCRAFT_PART_INSTALL
