--- a/tests/main/snapctl-is-connected-pid/task.yaml
+++ b/tests/main/snapctl-is-connected-pid/task.yaml
@@ -1,4 +1,4 @@
-summary: Ensure that "snapctl is-connected --pid" works.
+summary: Ensure "snapctl is-connected" --pid and --apparmor-label options work.
 
 prepare: |
     tests.cleanup prepare
@@ -52,6 +52,15 @@ execute: |
 
     echo "Interfaces still not connected to non-snap process"
     expect_status 10 test-snap2.snapctl is-connected --pid 1 foo-slot
+
+    if [[ "$(snap debug confinement)" = strict ]]; then
+      svc_label=$(cat "/proc/$svc_pid/attr/current" | sed 's/ (.*)$//')
+
+      echo "We can detect connected interfaces by AppArmor label too"
+      test-snapd2.snapctl is-connected --apparmor-label "$svc_label" foo-slot
+      snap connect test-snap1:foo-plug test-snap2:foo-slot
+      expect_status 1 test-snap2.snapctl is-connected --apparmor-label "$svc_label" foo-slot
+    fi
 
     # The remaining tests rely on classic confinement, so skip Ubuntu Core
     if [[ "$SPREAD_SYSTEM" = ubuntu-core-* ]]; then
