--- a/tests/main/lxd-services-smoke/task.yaml
+++ b/tests/main/lxd-services-smoke/task.yaml
@@ -1,12 +1,20 @@
-summary: Ensure refreshing lxd and removing it works.
+summary: Ensure refreshing snaps with services atfer service commands works.
 
 systems: [ubuntu-18.04*, ubuntu-20.04*]
 
 execute: |
+  echo "Testing a simple snap first"
+  "$TESTSTOOLS"/snaps-state install-local test-snap-v1
+  snap stop test-snap
+  snap start test-snap
+  "$TESTSTOOLS"/snaps-state install-local test-snap-v2
+  snap remove test-snap --purge
+
+  echo "Testing with lxd snap"
   snap install lxd
   snap stop lxd
   snap start lxd
+  # TODO: this may fail if revision is same as stable
   snap refresh --edge lxd
-
   # XXX: this (always?) fails
   snap remove lxd --purge
