--- a/tests/lib/tools/suite/journal-state/task.yaml
+++ b/tests/lib/tools/suite/journal-state/task.yaml
@@ -13,7 +13,15 @@ execute: |
     # Check that the test is correctly started in the journal log
     "$TESTSTOOLS"/journal-state start-new-log
     echo "Add some extra logs" | systemd-cat -t snapd-test
-    retry --wait 1 --attempts 30 sh -c "test $(journalctl --cursor "$cursor1" | grep -c "$SPREAD_JOB") -eq 1"
+    # Here cannot be used the retry tool because we need to evaluate the whole
+    # test command within the retry but the cursor1 var within the test
+    for _ in $(seq 10); do
+        if test $(journalctl --cursor "$cursor1" | grep -c "$SPREAD_JOB") -eq 1; then
+            break
+        fi
+        sleep 1
+    done
+    test $(journalctl --cursor "$cursor1" | grep -c "$SPREAD_JOB") -eq 1
 
     # Check that the subcommand check-log-started works
     # The subcommand check-log-started could fail if the log does not contain the current SPREAD_JOB information
@@ -21,12 +29,12 @@ execute: |
 
     # Check that the subcommand get-log works
     echo "TEST-XX1" | systemd-cat -t snapd-test
-    retry --wait 1 --attempts 30 sh -c "test $("$TESTSTOOLS"/journal-state get-log | grep -c TEST-XX1) -eq 1"
+    retry --wait 1 --attempts 10 sh -c 'test $("$TESTSTOOLS"/journal-state get-log | grep -c TEST-XX1) -eq 1'
 
     # Check that the subcommand get-last-cursor works
     echo "TEST-XX2" | systemd-cat -t snapd-test
     echo "Add some extra logs" | systemd-cat -t different-test
-    retry --wait 1 --attempts 30 sh -c "test $("$TESTSTOOLS"/journal-state get-log | grep -c TEST-XX2) -eq 1"
+    retry --wait 1 --attempts 10 sh -c 'test $("$TESTSTOOLS"/journal-state get-log | grep -c TEST-XX2) -eq 1'
 
     cursor2=$("$TESTSTOOLS"/journal-state get-last-cursor)
     test "$("$TESTSTOOLS"/journal-state get-log-from-cursor "$cursor2" | grep -c "TEST-XX1")" -eq 0
