--- a/tests/lib/tools/suite/journal-state/task.yaml
+++ b/tests/lib/tools/suite/journal-state/task.yaml
@@ -30,13 +30,13 @@ execute: |
     # Check that the subcommand get-log works
     echo "TEST-XX1" | systemd-cat -t snapd-test
     # shellcheck disable=SC2016
-    retry --wait 1 --attempts 10 sh -c 'test $("$TESTSTOOLS"/journal-state get-log | grep -c TEST-XX1) -eq 1'
+    retry --wait 1 --attempts 10 sh -c 'test "$("$TESTSTOOLS"/journal-state get-log | grep -c TEST-XX1)" -eq 1'
 
     # Check that the subcommand get-last-cursor works
     echo "TEST-XX2" | systemd-cat -t snapd-test
     echo "Add some extra logs" | systemd-cat -t different-test
     # shellcheck disable=SC2016
-    retry --wait 1 --attempts 10 sh -c 'test $("$TESTSTOOLS"/journal-state get-log | grep -c TEST-XX2) -eq 1'
+    retry --wait 1 --attempts 10 sh -c 'test "$("$TESTSTOOLS"/journal-state get-log | grep -c TEST-XX2)" -eq 1'
 
     cursor2=$("$TESTSTOOLS"/journal-state get-last-cursor)
     test "$("$TESTSTOOLS"/journal-state get-log-from-cursor "$cursor2" | grep -c "TEST-XX1")" -eq 0
