--- a/tests/main/uc20-create-partitions-encrypt/task.yaml
+++ b/tests/main/uc20-create-partitions-encrypt/task.yaml
@@ -100,6 +100,8 @@ execute: |
 
     echo "Check that the key file was created"
     test "$(stat --printf=%s unsealed-key)" -eq 64
+    # recovery key is 16 bytes long
+    test "$(stat --printf=%s recovery-key)" -eq 16
 
     echo "Check that the partitions are created"
     sfdisk -d "$LOOP" | MATCH "^${LOOP}p1 .*size=\s*2048, type=21686148-6449-6E6F-744E-656564454649,.*BIOS Boot"
@@ -128,7 +130,7 @@ execute: |
 
     # Test the recovery key
     echo "Ensure that we can open the encrypted device using the recovery key"
-    cryptsetup open --key-file /run/mnt/ubuntu-data/system-data/var/lib/snapd/device/fde/recovery.key "${LOOP}p4" test-recovery
+    cryptsetup open --key-file recovery-key "${LOOP}p4" test-recovery
     mount /dev/mapper/test-recovery ./mnt
     umount ./mnt
     cryptsetup close /dev/mapper/test-recovery
