--- a/tests/main/refresh/task.yaml
+++ b/tests/main/refresh/task.yaml
@@ -123,6 +123,7 @@ execute: |
       . "$TESTSLIB/pkgdb.sh"
       distro_install_package inotify-tools
       # XXX: probably a bug in defer, this fails without ' ' quotes around the rest.
+      # shellcheck disable=SC2016
       tests.cleanup defer 'bash -c ". $TESTSLIB/pkgdb.sh; distro_purge_package inotify-tools"'
       systemd-run \
         --unit test-snapd-watch-inhibit.service \
