tests/nested/manual/minimal-smoke: use 384MB of RAM for UC20
The original bug report mentions use of 256MB of RAM
https://bugs.launchpad.net/snapd/+bug/1897533. However, given that we require
EFI and support secure boot, bumping the minimal memory requirement to 384MB may
be warranted.

Signed-off-by: Maciej Borzecki <maciej.zenon.borzecki@canonical.com>

--- a/tests/nested/manual/minimal-smoke/task.yaml
+++ b/tests/nested/manual/minimal-smoke/task.yaml
@@ -18,6 +18,8 @@ execute: |
 
     if nested_is_core_20_system ; then
         NESTED_SPREAD_SYSTEM=ubuntu-core-20-64
+        # TODO:UC20: this should written down in the official docs
+        MINIMAL_MEM=384
     elif nested_is_core_18_system; then
         NESTED_SPREAD_SYSTEM=ubuntu-core-18-64
     elif nested_is_core_16_system; then
