--- a/tests/main/snap-env/task.yaml
+++ b/tests/main/snap-env/task.yaml
@@ -2,7 +2,7 @@ summary: inspect all the set environment variables prefixed with SNAP_ and XDG_
 
 environment:
     NAME/regular: test-snapd-tools
-    INSTANCE_KEY/regular:
+    INSTANCE_KEY/regular: ""
     NAME/parallel: test-snapd-tools_foo
     INSTANCE_KEY/parallel: foo
 
