cmd/snap-confine: explain slave rules better
Previously they were joined together with normal/legacy mode rules and
it seemed like they belong to legacy rules. The reality is that they are
shared by both.

Signed-off-by: Zygmunt Krynicki <me@zygoon.pl>

--- a/cmd/snap-confine/snap-confine.apparmor.in
+++ b/cmd/snap-confine/snap-confine.apparmor.in
@@ -226,6 +226,8 @@
 
     # /etc/alternatives (core/legacy mode)
     mount options=(rw bind) /etc/alternatives/ -> /tmp/snap.rootfs_*/etc/alternatives/,
+
+    # making all those directories slave shared.
     mount options=(rw slave) -> /tmp/snap.rootfs_*/etc/alternatives/,
     mount options=(rw slave) -> /tmp/snap.rootfs_*/etc/ssl/,
     mount options=(rw slave) -> /tmp/snap.rootfs_*/etc/nsswitch.conf,
